include/rustscale.h

// rustscale C ABI - libtailscale equivalent
//
// Auto-generated by cbindgen. Do not edit; run tools/gen-header.sh.
//
// All functions return 0 on success and a negative errno-style code on error
// unless otherwise noted.  String arguments are NUL-terminated C strings; the
// caller retains ownership.  Buffer arguments (errmsg, status_json) are filled
// by the callee up to *buflen bytes; the actual number of bytes written
// (excluding the NUL) is returned, or a negative code on error.
//
// Handles are opaque non-negative integers.  Every handle must be closed:
//   ts_close        for server handles,
//   ts_listener_close for listener handles,
//   ts_conn_close   for connection handles.


#ifndef RUSTSCALE_H
#define RUSTSCALE_H

/* Warning: this file is auto-generated by cbindgen. Do not edit. */

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Server already up / resource busy (EBUSY).
 */
#define RS_ERR_BUSY -16

/**
 * Invalid argument (EINVAL).
 */
#define RS_ERR_INVAL -22

/**
 * No such handle (ENOENT).
 */
#define RS_ERR_NOENT -2

/**
 * Operation timed out (ETIMEDOUT).
 */
#define RS_ERR_TIMEOUT -110

/**
 * Generic failure.
 */
#define RS_ERR_UNKNOWN -1

/**
 * Success.
 */
#define RS_OK 0

/**
 * Accept the next incoming connection (blocking).
 * Returns a non-negative connection handle or a negative error code.
 */
int ts_accept(int listener);

/**
 * Clear the selected exit node. Returns 0 on success, a negative errno-style
 * code on error. Requires the server to be up.
 */
int ts_clear_exit_node(int handle);

/**
 * Shut down and destroy a server handle. Returns 0 on success.
 */
int ts_close(int handle);

/**
 * Close a connection handle. Returns 0 on success.
 */
int ts_conn_close(int conn);

/**
 * Read up to `len` bytes into `buf` (blocking).
 * Returns bytes read (0 = EOF), or a negative error code.
 */
int ts_conn_read(int conn, char *buf, int len);

/**
 * Write `len` bytes from `buf` (blocking).
 * Returns bytes written, or a negative error code.
 */
int ts_conn_write(int conn, const char *buf, int len);

/**
 * Dial a remote `addr` (e.g. "100.64.0.2:443" or "peer:80").
 * Returns a non-negative connection handle or a negative error code.
 */
int ts_dial(int handle, const char *proto, const char *addr);

/**
 * Retrieve the last error message for a server handle into `buf`.
 * Returns bytes written (excluding NUL), or a negative code.
 */
int ts_errmsg(int handle, char *buf, int buflen);

/**
 * Start listening. `addr` may be ":PORT", "0.0.0.0:PORT", or just "PORT".
 * `proto` is reserved (only "tcp" supported). Returns a listener handle.
 */
int ts_listen(int handle, const char *proto, const char *addr);

/**
 * Close a listener handle. Returns 0 on success.
 */
int ts_listener_close(int listener);

/**
 * Create a new tsnet server handle.
 */
int ts_new(void);

/**
 * Configure TCP forwarding on `port` to `backend_addr` (e.g. "127.0.0.1:8080").
 * This sets a minimal serve config with a single TCP-forward handler. Returns
 * 0 on success, a negative errno-style code on error. Requires the server to
 * be up in netstack mode.
 */
int ts_serve_tcp(int handle, uint16_t port, const char *backend_addr);

/**
 * Set the auth key.
 */
int ts_set_authkey(int handle, const char *authkey);

/**
 * Set the control-plane URL.
 */
int ts_set_control_url(int handle, const char *url);

/**
 * Set the ephemeral flag (0 = false, non-zero = true).
 */
int ts_set_ephemeral(int handle, int ephemeral);

/**
 * Select an exit node by tailnet IP or MagicDNS hostname. The peer must be
 * exit-node-capable (AllowedIPs containing 0.0.0.0/0). Returns 0 on success,
 * a negative errno-style code on error. Requires the server to be up.
 */
int ts_set_exit_node(int handle, const char *addr);

/**
 * Set the hostname.
 */
int ts_set_hostname(int handle, const char *hostname);

/**
 * Set the state directory.
 */
int ts_set_state_dir(int handle, const char *dir);

/**
 * Retrieve server status as JSON into `buf`.
 * Returns bytes written (excluding NUL), or a negative code.
 */
int ts_status_json(int handle, char *buf, int buflen);

/**
 * Bring the server online (blocking). Returns 0 on success.
 */
int ts_up(int handle);

/**
 * Look up the peer owning a tailnet IP address (WhoIs). `addr` is a string
 * IP (e.g. `"100.64.0.5"`). Writes a JSON object into `buf`:
 * `{"found":bool,"node_name":...,"tailscale_ips":[...],"user_id":...,
 * "login_name":...,"display_name":...}`. Returns bytes written (excluding
 * the NUL terminator), or a negative errno-style code on error. If no peer
 * matches (or the server is not up), `found` is `false`.
 */
int ts_whois(int handle, const char *addr, char *buf, int buflen);

#endif  /* RUSTSCALE_H */